# viam-python-sdk

./: .buildinfo  .flake8  .gitignore  .htmltest.yml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  GAP_SUMMARY.md  Makefile  PROTOBUF_GAP_ANALYSIS.md  PROTOBUF_GAP_ANALYSIS_FINAL.md  README.md  SETUP.md  analyze_proto.py  buf.gen.yaml  buf.yaml  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  pyvenv.cfg  requirements-test.txt  search.html  searchindex.js  setup.cfg  setup.py  sync_jira_release (1).py  tox.ini  update_api_version.py  update_version.py  viam.components.arm.arm.html  viam.components.arm.client.html  (+89 more)
.claude/: settings.ci.json
.doctrees/: environment.pickle  index.doctree  modules.doctree  viam.components.arm.arm.doctree  viam.components.arm.client.doctree  viam.components.arm.doctree  viam.components.arm.service.doctree  viam.components.base.base.doctree  viam.components.base.client.doctree  viam.components.base.doctree  viam.components.base.service.doctree  viam.components.board.board.doctree  viam.components.board.client.doctree  viam.components.board.doctree  viam.components.board.service.doctree  viam.components.camera.camera.doctree  viam.components.camera.client.doctree  viam.components.camera.doctree  viam.components.camera.service.doctree  viam.components.component_base.doctree  viam.components.doctree  viam.components.gantry.client.doctree  viam.components.gantry.doctree  viam.components.gantry.gantry.doctree  viam.components.gantry.service.doctree  viam.components.generic.client.doctree  viam.components.generic.doctree  viam.components.generic.generic.doctree  viam.components.generic.service.doctree  viam.components.gps.client.doctree  viam.components.gps.doctree  viam.components.gps.gps.doctree  viam.components.gps.service.doctree  viam.components.gripper.client.doctree  viam.components.gripper.doctree  viam.components.gripper.gripper.doctree  viam.components.gripper.service.doctree  viam.components.imu.client.doctree  viam.components.imu.doctree  viam.components.imu.imu.doctree  (+54 more)
.github/: CODEOWNERS
.github/workflows/: ai-updater-dev.yml  ai-updater-specific.yml  ai-updater-test.yml  ai-updater.yml  build-wheels.yml  claude-ci-fix.yml  claude-dependabot-sweep.yml  claude-jira.yml  claude-pr-assistant.yml  claude-pr-fix.yml  claude-review.yml  code-samples-comment.yml  docs.yml  license_finder.yml  linkcheck.yml  prerelease_version_bump.yml  publish.yml  release-candidate.yml  release.yml  sync-release-to-jira.yml  test-ai-updater-exp.yml  test-ai-updater.yml  test.yml  test2-ai-updater.yml  update_protos.yml
_modules/: index.html
_modules/viam/: errors.html  logging.html  operations.html  registry.html  sessions_client.html  streams.html  utils.html
_sources/: example.ipynb.txt  index.md.txt  index.rst.txt  viam.components.arm.rst.txt  viam.components.arm.service.rst.txt  viam.components.base.rst.txt  viam.components.base.service.rst.txt  viam.components.board.board.rst.txt  viam.components.board.client.rst.txt  viam.components.board.service.rst.txt  viam.components.camera.rst.txt  viam.components.gantry.gantry.rst.txt  viam.components.generic.client.rst.txt  viam.components.generic.generic.rst.txt  viam.components.generic.rst.txt  viam.components.gripper.client.rst.txt  viam.components.gripper.gripper.rst.txt  viam.components.imu.rst.txt  viam.components.imu.service.rst.txt  viam.components.input.client.rst.txt  viam.components.input.input.rst.txt  viam.components.input.rst.txt  viam.components.input.service.rst.txt  viam.components.motor.client.rst.txt  viam.components.motor.service.rst.txt  viam.components.pose_tracker.pose_tracker.rst.txt  viam.components.pose_tracker.rst.txt  viam.components.pose_tracker.service.rst.txt  viam.components.rst.txt  viam.components.servo.service.rst.txt  viam.components.servo.servo.rst.txt  viam.components.types.rst.txt  viam.errors.rst.txt  viam.metadata.service.rst.txt  viam.proto.api.rst.txt  viam.proto.rst.txt  viam.robot.rst.txt  viam.rst.txt  viam.services.frame_system.rst.txt  viam.services.motion.rst.txt  (+4 more)
_sources/autoapi/: index.rst.txt
_sources/examples/: example.ipynb.txt
autoapi/: index.html
autoapi/client/: index.html
autoapi/viam/: index.html
cookiecutter-template/: __main__.spec  cookiecutter.json
cookiecutter-template/{{cookiecutter.module_name}}/: .viam-gen-info  meta.json
doc/: dependency_decisions.yml
docs/: CNAME  Makefile  conf.py  example.ipynb  index.html  index.md  make.bat  search.js  viam.html
docs/_templates/: package.rst_t
docs/examples/: _data_server.py  _server.py  example.ipynb  module_step2.py  module_step2_optional.py  module_step3.py  my_cool_arm.py
docs/source/: conf.py  index.rst  modules.rst  viam.components.arm.arm.rst  (+62 more)
etc/: _update_version_metadata.py  code-samples-action.py  generate_proto_import.py  postinstall.sh  requirements.txt  sync_jira_release.py  unimplemented_service_plugin.py  update_api_version.py
examples/: api.json  apis.json  example.html
module_generator/: README.md  generate_main.py
plugin/: main.py
tests/: __init__.py  package.json  test_app_client.py  test_arm.py  test_audio_in.py  test_audio_input.py  test_audio_out.py  test_base.py  test_billing_client.py  test_board.py  test_button.py  test_camera.py  test_component_service_base.py  test_data_client.py  test_data_pipelines.py  test_data_sync_client.py  test_dataset.py  test_discovery_service.py  test_easy_resource.py  test_encoder.py  test_examples.py  test_frame_system_service.py  test_gantry.py  test_generic.py  test_generic_component.py  test_generic_service.py  test_gps.py  test_gripper.py  test_imu.py  test_input.py  test_media.py  test_metadata_service.py  test_ml_training_client.py  test_mlmodel.py  test_mlmodel_service.py  test_mlmodel_utils.py  test_module.py  test_motion_service.py  test_motor.py  test_movement_sensor.py  (+28 more)
tmp/: .gitignore
viam/: __init__.py  _version.py  dial.py  errors.py  logging.py  proto.py  registry.py  utils.py
(+1377 files in other folders)
