[tool.poetry]
name = "viam-sdk"
version = "0.19.0"
description = "Viam Robotics Python SDK"
authors = [ "Naveed <naveed@viam.com>" ]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "viam", from = "src" },
]
include = ["LICENSE", "src/viam/rpc/libviam_rust_utils.*"]

  [tool.poetry.dependencies]
  python = ">=3.8.1,<3.13"
  grpclib = [
    {version = "<0.4.7rc-1", python = "<3.12"},
    {version = ">=0.4.7rc-1", python = ">=3.12"},
  ]
  googleapis-common-protos = ">=1.60.0,<2"
  typing-extensions = ">=4.8.0,<5"
  Pillow = ">=9.1.0,<11"
  protobuf = ">=4.24.3,<5"
  numpy = { version = ">=1.21,<2", optional = true }

  [tool.poetry.group.dev.dependencies]
  pytest = "^7.4.3"
  pytest-asyncio = "^0.23.2"
  coverage = "^7.3.2"
  protoletariat = "^3.2.19"
  jupyter = "^1.0.0"
  flake8 = "^6.1.0"
  myst-nb = [
    {version = "<1.0.0", python = "<3.9"},
    {version = ">=1.0.0", python = ">=3.9"},
  ]
  sphinx-autoapi = [
    {version = "<3.0.0", python = "<3.9"},
    {version = ">=3.0.0", python = ">=3.9"},
  ]
  sphinx-rtd-theme = "^2.0.0"
  autopep8 = "^2.0.4"
  black = {extras = ["jupyter"], version = "^23.12.0"}
  nbmake = "^1.4.6"
  types-pillow = "^10.1.0.2"
  mypy-protobuf = "^3.5.0"
  tox = "^4.11.4"
  isort = "^5.12.0"
  pytest-watcher = "^0.3.4"
  numpy = [
    {version = "<1.25.0", python = "<3.9"},
    {version = ">=1.26.2", python = ">=3.9"},
  ]
  pyright = "^1.1.339"

  [tool.poetry.extras]
  mlmodel = ["numpy"]


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [ "*/gen/*" ]

[tool.coverage.report]
exclude_lines = [ "pragma: no\\s*cover", "\\.\\.\\." ]

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
skip_glob = ["**/gen/**"]
line_length = 140

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [ "src" ]
exclude = [ "**/gen", "**/proto" ]
