[project]
name = "viam-sdk"
description = "Viam Robotics Python SDK"
authors = [
	{name = "Naveed Jooma", email = "naveed@viam.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = [
	'version',
]
dependencies = [
    "grpclib>=0.4.9",
    "protobuf==6.33.5",
    "typing-extensions>=4.15.0",
    "pymongo>=4.10.1",
    "googleapis-common-protos>=1.73.0",
]
[dependency-groups]
dev = [
	"coverage>=7.13.4",
	"mypy-protobuf>=5.0.0",
	"myst-nb>=1.4.0",
	"nbmake>=1.5.5",
	"numpy<2.3.0; python_version<'3.11'",
	"numpy>=1.3.0; python_version>='3.11'",
	"pillow>=12.1.1",
	"pyright>=1.1.401",
	"pytest-asyncio>=1.3.0",
	"pytest>=9.0.2",
	"ruff>=0.15.5",
	"sphinx-autoapi>=3.7.0",
	"sphinx-rtd-theme>=3.1.0",
]

[project.urls]
Homepage = "https://www.viam.com"
Documentation = "https://python.viam.dev"
Repository = "https://github.com/viamrobotics/viam-python-sdk"

[project.optional-dependencies]
mlmodel = [
	"numpy",
	"packaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/viam/version_metadata.py"

[tool.hatch.build.targets.wheel]
packages = ["src/viam"]
artifacts = ["src/viam/rpc/libviam_rust_utils.*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [ "*/gen/*", "*/proto/*" ]

[tool.pyright]
include = [ "src" ]
exclude = [ "**/gen", "**/proto" ]

[tool.ruff]
line-length = 140
exclude = [
    ".direnv",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
	"gen",
	"*_grpc.py",
	"*_pb2.py",
	"*.pyi",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
