[metadata]
name = viam-python-sdk
version = 0.0.1
author = Viam
author_email = naveed@viam.com
description = Viam Python SDK to connect to robots running the Viam RDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viamrobotics/python-sdk
project_urls =
    Bug Tracker = https://github.com/viamrobotics/python-sdk/issues
keywords='robotics robots',
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = viam
packages = find:
python_requires = >=3.6
install_requires=
    grpclib

[options.package_data]
* = *.pyi
grpclib =
    py.typed
